set(TARGET_NAME AnyEngine)


set(ENGINE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

file(GLOB_RECURSE RUNTIME_HEADERS CONFIGURE_DEPENDS ${ENGINE_SOURCE_DIR}/*.h)
file(GLOB_RECURSE RUNTIME_SOURCES CONFIGURE_DEPENDS ${ENGINE_SOURCE_DIR}/*.cpp)

source_group(TREE "${ENGINE_SOURCE_DIR}" FILES ${RUNTIME_HEADERS} ${RUNTIME_SOURCES})

include_directories( 
	${ENGINE_SOURCE_DIR}
)

add_library(${TARGET_NAME} ${RUNTIME_HEADERS} ${RUNTIME_SOURCES})

set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 17)
set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "engine")    

target_link_libraries(${TARGET_NAME} glfw gfx)
target_include_directories(${TARGET_NAME} PUBLIC ${ENGINE_SOURCE_DIR})