set(TARGET_NAME AnyEngine)

option(USE_GFX_TEST "run gfx test app" ON)

set(THIRD_LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rd")
set(ENGINE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(COMMON_LIB_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/../modules/common/include/")

file(GLOB_RECURSE RUNTIME_HEADERS CONFIGURE_DEPENDS ${ENGINE_SOURCE_DIR}/*.h)
file(GLOB_RECURSE RUNTIME_SOURCES CONFIGURE_DEPENDS ${ENGINE_SOURCE_DIR}/*.cpp)

source_group(TREE "${ENGINE_SOURCE_DIR}" FILES ${RUNTIME_HEADERS} ${RUNTIME_SOURCES})

set(ENGINE_HEAD_DIRS 
${ENGINE_SOURCE_DIR}
${COMMON_LIB_INCLUDE})

include_directories( 
	${ENGINE_HEAD_DIRS}
)

if(USE_GFX_TEST)
	add_definitions(-DUSE_GFX_TEST)
endif()

add_library(${TARGET_NAME} ${RUNTIME_HEADERS} ${RUNTIME_SOURCES})

set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 17)
set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "engine")    

target_link_libraries(${TARGET_NAME} glfw gfx pipeline)
target_include_directories(${TARGET_NAME} PUBLIC ${ENGINE_HEAD_DIRS})