set(TARGET_NAME pipeline)

set(PIPELINE_LIB_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/source")
set(PIPELINE_LIB_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(COMMON_MODULE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../common/include")

file(GLOB_RECURSE PIPELINE_HEADERS CONFIGURE_DEPENDS ${PIPELINE_LIB_SOURCE}/*.h)
file(GLOB_RECURSE PIPELINE_SOURCES CONFIGURE_DEPENDS ${PIPELINE_LIB_SOURCE}/*.cpp)


source_group(TREE "${PIPELINE_LIB_SOURCE}" FILES 
	${PIPELINE_HEADERS} 
	${PIPELINE_SOURCES})

set(PIPELINE_PRIVATE_INCLUDE 
    ${PIPELINE_LIB_SOURCE}
    ${COMMON_MODULE_DIR}
)

set(PIPELINE_PUBLIC_INCLUDE
    ${PIPELINE_LIB_INCLUDE}
    ${PIPELINE_LIB_SOURCE}
)

add_library(${TARGET_NAME} ${PIPELINE_HEADERS} ${PIPELINE_SOURCES})

target_include_directories(${TARGET_NAME} PUBLIC ${PIPELINE_PUBLIC_INCLUDE})
target_include_directories(${TARGET_NAME} PRIVATE ${PIPELINE_PRIVATE_INCLUDE})

target_link_libraries(${TARGET_NAME} PUBLIC gfx)